2001-10-16  Matt Wilson  <msw@redhat.com>

	* codegen/h2def.py (define_func): convert all argument type
	whitespace to '-'.

2001-10-15  Matt Wilson  <msw@redhat.com>

	* pygtk-2.0.pc.in (pygtkincludedir): move headers to a
	version-specific directory so we can have old pygtk-devel and
	pygtk2-devel installed at the same time.

	* Makefile.am (pkgincludedir): likewise

	* gtk/Makefile.am (pkgincludedir): likewise

	* pygtk.spec.in (%files devel): pick up the new header location

2001-10-11  Matt Wilson  <msw@redhat.com>

	* pygtk.spec.in (%files devel): fixed typo in devel filelist
	(header) added macro that tests to see if we have libglade2
	(%files libglade) make the filelist a condition of that
	(Name) changed name to 'pygtk2' to avoid name conflict with pygtk

2001-10-11  Murray Cumming  <murrayc@usa.net>

	* h2def.py: Now it doesn't stop when it finds a function parameter
	with a type but no name. The resulting define-* will be missing
	that parameter, but at least the rest will have succeeded. 
	
2001-10-10  Matt Wilson  <msw@redhat.com>

	* gobjectmodule.c (pygobject_dealloc): also go set up the reflist
	if we're doing refcount debugging.

2001-10-11  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pygobject_dealloc): if we are saving a
	reference to the wrapper during dealloc (which is probably bad),
	check if it is a heap type, and if so, incref its type, so that
	subtype_dealloc() doesn't decref the type out from under us.  This
	problem was tracked down by Matt Wilson

2001-10-09  James Henstridge  <james@daa.com.au>

	* gtk/gtk-extrafuncs.defs (GenericTreeModel): fix up c-name.

	* examples/pygtk-demo/demos/treemodel.py (MyTreeModel): subclass
	from gtk.GenericTreeModel.

	* pygtk.spec.in (Requires): add new files to spec file.

2001-10-09  James Henstridge  <james@daa.com.au>

	* pango-types.defs: move types.

	* gtk/Makefile.am: modify rules to take into account splitting out
	the type definitions.  --register arguments now only parse the