@@ -1300,12 +1300,12 @@
   )
 )
 
-(define-function pixbuf_new_from_stream
-  (c-name "gdk_pixbuf_new_from_stream")
+(define-function pixbuf_new_from_inline
+  (c-name "gdk_pixbuf_new_from_inline")
   (return-type "GdkPixbuf*")
   (parameters
-    '("gint" "stream_length")
-    '("const-guchar*" "stream")
+    '("gint" "data_length")
+    '("const-guchar*" "data")
     '("gboolean" "copy_pixels")
     '("GError**" "error")
   )
