@@ -1,3 +1,13 @@
+2001-10-18  Matt Wilson  <msw@redhat.com>
+
+	* gtk/gdk.defs (pixbuf_new_from_inline): rename from
+	pixbuf_new_from_stream to match gdk-pixbuf changes in CVS.
+
+	* pygtk.spec.in (%files devel): get header from new location
+
+	* Makefile.am (pkgincludedir): put pygobject.h in
+	$(includedir)/pygtk-2.0, not $(includedir)/pygtk-2.0/pygtk
+
 2001-10-16  Matt Wilson  <msw@redhat.com>
 
 	* codegen/h2def.py (define_func): convert all argument type
